<resources>
    <string name="app_name">Spotlet</string>

    <string name="address">1234 Sample Road, City Name, ST, 00000</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="park">Parking Space</string>
    <string name="rating">Rating</string>
    <string name="next">Next</string>

    <string name="title">List a spot</string>

    <string name="upload">Upload Photo Here</string>
    <string name="street">Enter Street Name</string>
    <string name="city">Enter City</string>
    <string name="state">Enter State</string>
    <string name="zip_code">Enter ZIP Code</string>

    <string name="vehicle_size">Size vehicles allowed</string>

    <string name="submit">Submit</string>


    <string name="text_emailfield">Email Address:</string>
    <string name="text_passwordfield">Password:</string>
    <string name="button_login">Login</string>
    <string name="textView_confirmpassword">Confirm Password:</string>
    <string name="button_register">Register</string>
    <string name="text_profilename">Ada</string>
    <string name="text_profilelastname">Lovelace</string>
    <string name="title_activity_maps">Available Lots Near You</string>

    <string name="google_maps_key">AIzaSyCWrHKIMTbAE12TPSUqyFXy558F0kmMnyY</string>

    <string name="checkbox_compact">Fits Compact</string>
    <string name="checkbox_midsize">Fits Midsize</string>
    <string name="checkbox_large">Fits Large</string>

    <string name="parkhere">Park Here</string>
</resources>
