<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_loginpage"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/text_emailfield_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spotlet_caps_transparent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/button_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_passwordfield"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_passwordfield"
        android:textColor="@color/colorBase"
        app:layout_constraintBottom_toTopOf="@+id/editText_passwordlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_emaillogin"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_passwordfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emailfield_register" />

    <EditText
        android:id="@+id/editText_passwordlogin"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_emailfield_register"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_emailfield"
        android:textColor="@color/colorBase"
        app:layout_constraintBottom_toTopOf="@+id/editText_emaillogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_loginpage" />

</androidx.constraintlayout.widget.ConstraintLayout>